@@ -7,6 +7,9 @@ synaptic (0.81.1) UNRELEASED; urgency=low
     - updated, thanks to Emil Nowak 
   * gtk/rgrepositorywin.cc:
     - do not crash when a sources.list entry is removed (closes: #720605)
+  * gtk/rgfiltermanager.cc:
+    - do not change topmost filter when reopening filter settings
+      (closes: #724709)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 23 Mar 2014 09:24:16 +0100
 
